// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

export class C<X> {
  m(f: X => void) {}
}

=====================================output=====================================
// @flow

export class C<X> {
  m(f: (X) => void) {}
}

================================================================================
`;

exports[`main.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

import type {C} from './lib';

(x: C<number> | C<string>) => {
  x.m(y => {
    (y: number); // error string ~> number
  });
}

=====================================output=====================================
// @flow

import type { C } from "./lib";

(x: C<number> | C<string>) => {
  x.m((y) => {
    (y: number); // error string ~> number
  });
};

================================================================================
`;
